# webkv

./: Cargo.toml  flake.nix
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml
src/: lib.rs  snapshot.rs  transaction.rs  util.rs
src/storage/: idb.rs  memory.rs  mod.rs
tests/: idb.rs
