[package]
name = "webkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
embed-doc-image = "0.1.4"
hex = "0.4.3"
idb = { version = "0.6.1", features = ["futures"] }
itertools = "0.13.0"
futures-locks = "0.7.1"
macro_rules_attribute = "0.2.0"
tokio = { version = "1.38.0", features = ["sync"] }
tracing = "0.1.40"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dev-dependencies]
futures = "0.3.30"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-test = "0.4.4"
wasm-bindgen-test = "0.3.42"
